# kigam_kari_ai_tutorial

./: .gitignore  README.md
final_landslide_seg/: agents.md  eval_best.py  plan_v1.md  plan_v2.md  plan_v3.md  plan_v4.md  plan_v5.md  pyproject.toml  train_v0.py  train_v1.py  train_v2.py  train_v3.py  train_v4.py  train_v5.py
final_landslide_seg/l4s/: __init__.py  channel_select.py  clay_v15_model.py  clay_v1_model.py  dataset.py  dataset_v2.py  dinov3_model.py  gfm_models.py  losses.py  metrics.py  predict_utils.py  prithvi_advanced.py  prithvi_fusion.py  prithvi_hires.py  prithvi_models.py  separated_norm_dataset.py  train_gfm_advanced.py  train_utils.py  transforms.py  unet.py
final_landslide_seg/models/: unet.py
final_landslide_seg/reports/: overall_result.md  result_v0.md  result_v1.md  result_v2.md  result_v3.md  result_v4.md  result_v5.md
final_landslide_seg/utils/: plots.py
landslide_seg/: predict_v0.py  pyproject.toml  train_v0.py
landslide_seg/utils/: landsalides4sens_dataset.py  landslides4sense_dataset.py  loss.py  metrics.py  plots.py
terratorch/: iterate_hpo_burnscars.yaml  predict.py  prithvi_v2_eo_300_tl_unet_burnscars.yaml  pyproject.toml  train.py
torchgeo/: landsat_and_cdl.py  predict_inria.py  pyproject.toml  sentinel2_ndvi.py  train_inria.py  vhr10_data.py
torchgeo/utils/: plots.py
