[project]
name = "landslide-seg"
version = "0.1.0"
description = "Landslide segmentation using Landslides4Sense dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "torchvision",
    "numpy",
    "h5py",
    "albumentations",
    "wandb",
    "tqdm",
    "opencv-python-headless",
    "terratorch>=1.2.6",
    "timm>=1.0.26",
    "transformers>=5.5.4",
    "torchgeo>=0.9.0",
    "segmentation-models-pytorch>=0.5.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.10.2",
    "safetensors>=0.7.0",
    "torchmetrics>=1.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
