[project]
name = "landslide-seg"
version = "0.1.0"
description = "Landslide segmentation using Landslides4Sense dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11.0",
    "torchvision",
    "numpy",
    "h5py",
    "albumentations",
    "wandb",
    "tqdm",
    "opencv-python-headless",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
