[project]
name = "my-torchgeo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pycocotools>=2.0.11",
    "tensorboard>=2.20.0",
    "torchgeo>=0.9.0",
]

[tool.uv.sources]
torchgeo = { git = "https://github.com/ohhan777/torchgeo.git", rev = "fix/inria-datamodule-bugs" }
